TEST_PROGRAMS/VALID/print.go
package main

func main(){
    print("hello")
    println("hellO")
    print("hello\n")
    print("hello'pop")
    print('h')
}
