TEST_PROGRAMS/INVALID/09/blank_print.go
package blank_print

func main() {
    print(_, a)
}
